add tutorial file

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
 
     <details>
       <summary class="sidebar-nav-item">Tutorial</summary>
-      <a class="sidebar-nav-item" href="#subitem_tutorial1">1. Creating a model</a>
+      <a class="sidebar-nav-item" href="/YORU_doc/_tutorial/1_create_model.md">1. Creating a model</a>
       <a class="sidebar-nav-item" href="#subitem_tutorial2">2. Evaluating a model</a>
       <a class="sidebar-nav-item" href="#subitem_tutorial3">3. Analyzing videos</a>
       <a class="sidebar-nav-item" href="#subitem_tutorial4">4. Real-time analysis</a>
