--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,16 +27,12 @@
 
     <details>
       <summary class="sidebar-nav-item">Tutorial</summary>
-      <a class="sidebar-nav-item" href="/YORU_doc/_tutorial/1_create_model.md">1. Creating a model</a>
-      <a class="sidebar-nav-item" href="#subitem_tutorial2">2. Evaluating a model</a>
-      <a class="sidebar-nav-item" href="#subitem_tutorial3">3. Analyzing videos</a>
-      <a class="sidebar-nav-item" href="#subitem_tutorial4">4. Real-time analysis</a>
+      <a class="sidebar-nav-item" href="#subitem2">TBA</a>
     </details>
 
     <details>
       <summary class="sidebar-nav-item">Development notes</summary>
-      <a class="sidebar-nav-item" href="#subitem1">sub items 1</a>
-      <a class="sidebar-nav-item" href="#subitem2">sub items 2</a>
+      <a class="sidebar-nav-item" href="#subitem1">TBA</a>
     </details>
   
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
