--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,6 +36,7 @@
     </details>
   
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <a class="sidebar-nav-item" href="{{ site.Store.URL }}">Goods Shop</a>
     <span class="sidebar-nav-item">Currently {{ site.version }}</span>
   </nav>
 
