update layout html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,3 +29,6 @@
     <script src='{{ site.baseurl }}/public/js/script.js'></script>
   </body>
 </html>
+
+<meta name="description" content="YORU documents overview">
+<meta name="keywords" content="YORU, Your, behavior analysis, Behavior detection, real-time analysis, hayato yamanouchi, yoru">
