--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -80,7 +80,7 @@
     {% endfor %}
   
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <!-- <a class="sidebar-nav-item" href="{{ site.Store.URL }}">Goods Shop</a>-->
+    <a class="sidebar-nav-item" href="{{ site.Store.URL }}">YORU Goods Shop</a>
     <span class="sidebar-nav-item">Currently {{ site.version }}</span>
   </nav>
 
